# cmusfm

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  cmusfm.1  cmusfm.debug  configure.ac
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  code-scanning.yaml  codeql-analysis.yaml
debian/: changelog  control  copyright  manpages  rules
doc/: Makefile.am  cmusfm.1.rst
src/: Makefile.am  cache.c  cache.h  cmusfm.h  config.c  config.h  debug.h  libscrobbler.c  libscrobbler.h  libscrobbler2.c  libscrobbler2.h  main.c  md5.c  notify.c  notify.h  server.c  server.h  utils.c
test/: Makefile.am  test-cache.c  test-notify.c  test-server-notify.c  test-server-submit01.c  test-server-submit02.c  test-server-submit03.c  test-server.inc
